# manohar_rqt_mypkg

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
perspective/: the-very-first.perspective
resource/: MyPlugin2.ui
scripts/: manohar_rqt_mypkg.py
src/manohar_rqt_mypkg/: my_module.py
